--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,27 @@
+black==23.3.0
+cfgv==3.3.1
+click==8.1.3
 contourpy==1.0.7
 cycler==0.11.0
+distlib==0.3.6
+filelock==3.10.7
 fonttools==4.39.3
+identify==2.5.22
 kiwisolver==1.4.4
+mypy-extensions==1.0.0
+nodeenv==1.7.0
 numpy==1.24.2
 packaging==23.0
 pandas==1.5.3
+pathspec==0.11.1
 Pillow==9.5.0
+platformdirs==3.2.0
 plotly==5.14.0
+pre-commit==3.2.2
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
+PyYAML==6.0
 six==1.16.0
 tenacity==8.2.2
+virtualenv==20.21.0
